generación de todo el frontend de la aplicación. Modificación del método 'update' en 'user.controller'

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -4,3 +4,19 @@
 @theme {
   --font-Inter: 'Inter'
 }
+
+.no-spin::-webkit-outer-spin-button,
+.no-spin::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.no-spin {
+  -moz-appearance: textfield; /* Para Firefox */
+  appearance: none;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(0.5);
+  opacity: 1;
+}
